WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
259829
[css-color] Fix serialization of percentages in color-mix()
https://bugs.webkit.org/show_bug.cgi?id=259829
Summary
[css-color] Fix serialization of percentages in color-mix()
Tim Nguyen (:ntim)
Reported
2023-08-04 08:59:14 PDT
See: -
https://github.com/w3c/csswg-drafts/issues/8564
-
https://github.com/web-platform-tests/wpt/commit/81a8e5242a66e425ee1384cdce4b1f371e76fa41
-
https://github.com/web-platform-tests/wpt/commit/5beee9786621a39c09f67d58a918017b822038b0
Attachments
Add attachment
proposed patch, testcase, etc.
Radar WebKit Bug Importer
Comment 1
2023-08-04 08:59:21 PDT
<
rdar://problem/113399146
>
Tim Nguyen (:ntim)
Comment 2
2023-09-01 18:51:48 PDT
Pull request:
https://github.com/WebKit/WebKit/pull/17368
EWS
Comment 3
2023-09-03 14:02:39 PDT
Committed
267596@main
(fdf9b00e784e): <
https://commits.webkit.org/267596@main
> Reviewed commits have been landed. Closing PR #17368 and removing active labels.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug