[css-color] Fix serialization of percentages in color-mix() https://bugs.webkit.org/show_bug.cgi?id=259829 rdar://113399146

Reviewed by Darin Adler.

From https://drafts.csswg.org/css-color-5/#serial-color-mix

> The serialization of the specified value of a color-mix() function is the string "color-mix(in ", followed by the specified <color-space> in all-lowercase,
> followed by ", ", followed by the first specified color, followed by a space, followed by the specified (un-normalized) first percentage (unless both percentages are 50%),
> followed by ", ", followed by the second specified color, followed by the specified (un-normalized) second percentage (unless the two specified percentages add to 100%), followed by ")".

* LayoutTests/imported/w3c/web-platform-tests/css/css-color/parsing/color-valid-color-mix-function-expected.txt:
* LayoutTests/imported/w3c/web-platform-tests/css/css-color/parsing/color-valid-color-mix-function.html:
* Source/WebCore/WebCore.xcodeproj/project.pbxproj:
* Source/WebCore/css/StyleColor.cpp:
(WebCore::serializationForCSS):
* Source/WebCore/css/color/CSSColorMixSerialization.h: Added.
(WebCore::serializeColorMixColor):
(WebCore::serializeColorMixPercentage):
(WebCore::percentageDoubleValue):
(WebCore::serializationForCSSColorMix):
* Source/WebCore/css/color/CSSUnresolvedColorMix.cpp:
(WebCore::serializationForCSS):

Canonical link: https://commits.webkit.org/267596@main